feature: create game header controls.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,68 @@
   </head>
   <body>
     <main class="main-container">
-      <header></header>
+      <header class="game-header">
+        <h2 class="timer">
+          <svg
+            width="51"
+            height="51"
+            viewBox="0 0 51 51"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g clip-path="url(#clip0)">
+              <path
+                d="M18.8838 0V4.19786H23.0817V6.29674C24.5509 6.08688 25.8103 6.08688 27.2796 6.29674V4.19786H31.4774V0H18.8838Z"
+                fill="white"
+              />
+              <path
+                d="M39.4532 13.8528L40.9224 12.3836L42.6016 14.0628L45.5401 11.1243L39.2434 4.82751L36.3049 7.76603L37.984 9.44509L36.095 11.3341C26.0202 5.24723 13.0069 8.3956 7.12998 18.4704C1.25305 28.5452 4.40132 41.1387 14.2663 47.2255C24.1312 53.3124 37.1444 50.1641 43.0214 40.0893C48.2687 31.4837 46.7995 20.5694 39.4532 13.8528ZM25.1806 43.8673C16.9948 43.8673 10.4882 37.3607 10.4882 29.175C10.4882 20.9892 16.9948 14.4825 25.1806 14.4825V29.1749H39.8729C39.873 37.3606 33.3663 43.8673 25.1806 43.8673Z"
+                fill="white"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0">
+                <rect width="50.3226" height="50.3226" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+
+          03:00
+        </h2>
+
+        <div class="game-header-info">
+          <button class="start-restart-btn">
+            Start
+
+            <svg
+              width="15"
+              height="15"
+              viewBox="0 0 15 15"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0)">
+                <path
+                  d="M12.5368 1.887C11.7418 1.093 10.8068 0.528002 9.8098 0.190002V2.325C10.2898 2.564 10.7448 2.875 11.1438 3.275C13.1368 5.269 13.1368 8.511 11.1438 10.504C9.1508 12.494 5.9108 12.494 3.9148 10.504C1.9238 8.509 1.9238 5.269 3.9148 3.275C3.9198 3.269 3.9358 3.259 3.9428 3.25H3.9448L5.1258 4.429L5.1188 0.685002L1.3768 0.680002L2.5528 1.856C2.5458 1.868 2.5348 1.88 2.5258 1.887C-0.237198 4.649 -0.237198 9.13 2.5258 11.892C5.2928 14.657 9.7708 14.657 12.5368 11.892C15.2978 9.13 15.3008 4.649 12.5368 1.887Z"
+                  fill="#7158E2"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0">
+                  <rect
+                    width="14.155"
+                    height="14.155"
+                    fill="white"
+                    transform="translate(0.453796)"
+                  />
+                </clipPath>
+              </defs>
+            </svg>
+          </button>
+
+          <span class="moves-count">Moves: 6</span>
+        </div>
+      </header>
 
       <section class="board">
         <div class="card">?</div>
