--- a/index.html
+++ b/index.html
@@ -72,24 +72,9 @@
         </div>
       </header>
 
-      <section class="board">
-        <div class="card">?</div>
-        <div class="card card-active">😀</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card card-active">😀</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-        <div class="card">?</div>
-      </section>
+      <section class="board" id="board"></section>
     </main>
+
+    <script src="src/main.js"></script>
   </body>
 </html>
