feature: add moves count and fix reset logig.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </svg>
           </button>
 
-          <span class="moves-count">Moves: 6</span>
+          <span class="moves-count" id="moves-count">Moves: 0</span>
         </div>
       </header>
 
