feature: control cards when game start

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </h2>
 
         <div class="game-header-info">
-          <button class="start-restart-btn">
+          <button class="start-restart-btn" id="start-btn">
             Start
 
             <svg
