feature: create game timer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </defs>
           </svg>
 
-          03:00
+          <span id="timer-count">03:00</span>
         </h2>
 
         <div class="game-header-info">
